# rust_async_chat_server_and_client

./: .gitignore  Cargo.toml  README.md
chat_client/: Cargo.toml
chat_client/src/: lib.rs  main.rs
chat_server/: Cargo.toml
chat_server/src/: lib.rs  main.rs
chat_shared/: Cargo.toml
chat_shared/src/: errors.rs  handles.rs  lib.rs  objects.rs
chat_shared/src/errors/: config_error.rs  mod.rs
chat_shared/src/handles/: cli_handle.rs  config_handle.rs  mod.rs
chat_shared/src/objects/: config.rs  message.rs  mod.rs  user.rs
env/: TEMPLATE_config.ron  TEMPLATE_config.toml
src/: main.rs
